# workflow

./: .env  .gitignore  Makefile  cache_answers.db  chat.db  company_policy.txt  pyproject.toml
api/: .env  .gitignore  Makefile  Prompt Universal.md  cache_answers.db  chat.db  chat.db-shm  chat.db-wal  chat_checkpoints.db  code-pypas-fb.md  docs.md  fb_page.html  fb_page_00e483b9-e1cb-49a6-8762-7afe46d40e12.html  fb_page_13bc1b8c-c056-4330-a533-7fdf74c7da84.html  fb_page_27648f73-0a46-4ca4-9f66-57d2d6206c6a.html  fb_page_3b562d9a-f762-459c-b178-4d8895dc14bb.html  fb_page_4a484e79-605d-4c58-b45c-40089b49a1b7.html  fb_page_4ad59708-81a3-43f9-8904-4c12e8278bf1.html  fb_page_61ccb626-a1d7-4050-870b-90f3018e6c94.html  fb_page_623cd4f5-96f2-4a28-8bdf-e72d5526a0ec.html  fb_page_a820a48d-3484-437a-ae5b-872d9a0c9580.html  fb_page_b1d77d88-1d3a-431e-997f-fafe4f30dee5.html  fb_page_be008853-7ca6-46e2-a6ca-255f8cc3ef19.html  fb_page_cb3a4582-ca23-46f2-a8a5-b7a786f6cd62.html  fb_page_e495d8e7-fff9-4ded-8ccb-a1c6fd043f80.html  fb_page_string.html  fb_page_test_id_001.html  fb_popup_string.html  fb_popup_test_id_001.html  google_search_string.html  hop_dong_kythuat.md  popup_00e483b9-e1cb-49a6-8762-7afe46d40e12.html  popup_13bc1b8c-c056-4330-a533-7fdf74c7da84.html  popup_27648f73-0a46-4ca4-9f66-57d2d6206c6a.html  popup_3b562d9a-f762-459c-b178-4d8895dc14bb.html  popup_3e66aec0-edd7-4de5-b7a3-d83b5933914a.html  popup_4a484e79-605d-4c58-b45c-40089b49a1b7.html  popup_4ad59708-81a3-43f9-8904-4c12e8278bf1.html  popup_555550fc-dde3-4caa-8f0e-11479efc02ad.html  popup_61ccb626-a1d7-4050-870b-90f3018e6c94.html  (+18 more)
api/alembic/: env.py
api/alembic/versions/: fbc2ca403e18_add_aliases_to_hotel_room.py
api/app/: browser.py  config.py  db.py  graph.py  llm_clients.py  main.py
api/app/brand/: brand_voice_extract.py  brand_voice_extract.py.md  brand_voice_prompt.j2  brand_voice_prompt.py  edit-prompt.md  extraction_prompt.py  models.py  research_mapper.py  router.py  schemas.py  service.py  service_slice copy.py.md  service_slice.py  service_slice_v1.py.md
api/app/business/: __init__.py  models.py  router.py  schemas.py  service.py
api/app/chat/: ai_sdk_adapter copy.py  ai_sdk_adapter.py  models.py  nodes.py  router.py  schemas.py  service.py
api/app/core/: Marketing Crew - System Architecture Blueprint & Integration Manual.md  deps.py  llm_engine.py  main_bus.py
api/app/docs/: webprower.md
api/app/marketing/: blog_graph.py  blog_node.py  config.py  graphs.py  models.py  nodes.py  nodes_v1.py  prompt_templates.j2  rag_context.py  router.py  schemas.py  service.py  workflow.py
api/app/nodes_library/: System-Prompt-Node_v1.md
api/app/rag/: background_service.py  business_service.py  business_service_V2.py  business_service_v1.py.md  business_service_v3.py  business_service_v4.py  hotel_router.py  hotel_service.py  image_router.py  loader.py  luu-y-rag.md  models.py  router.py  schemas.py  service.py  service_marketing.py
api/app/research/: models.py  models.py.md  nodes.py  nodes_v1.py  research_service -ok.py.md  router.py  (+8 more)
api/docs/: workflow-blog,md
api/hotels/: competitor_analysis.txt  competitors.txt  competitors_clean.txt  competitors_scraped.json  competitors_scraped_all.json  competitors_with_website.json  final_strategy_report.txt  google_trends.csv  tiktok_comments_with_user.json  tiktok_full_html.html  tiktok_trafilatura.json  tiktok_video_1_comments.html  tiktok_video_2_comments.html  tiktok_video_3_comments.html
api/notebooks/: FastEmbed__FAISS.ipynb  knowledge.ipynb  node2.ipynb  node_library.ipynb  optimized_graph.ipynb  service.ipynb  test.ipynb  workflow-Copy1.ipynb  workflow_new.ipynb
api/rag_storage/: data.json  faiss.index
(+749 files in other folders)
