[project]
name = "workflow"
version = "0.1.0"
description = "FastAPI + LangGraph agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.48.0",
    "langgraph>=1.2.2",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.4",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "sqlalchemy>=2.0.50",
    "aiosqlite>=0.22.1",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "httpx>=0.28.1",
]