[project]
name = "workflow"
version = "0.1.0"
description = "FastAPI + LangGraph agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.48.0",
    "langgraph>=1.2.2",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.4",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "sqlalchemy>=2.0.50",
    "aiosqlite>=0.22.1",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "httpx>=0.28.1",
    "pyyaml>=6.0.2",
    "jinja2>=3.1.4",
    "instructor>=1.15.1",
    "langchain-ollama>=1.1.0",
    "faiss-cpu>=1.14.2",
    "fastembed>=0.8.0",
    "rank-bm25>=0.2.2",
    "python-multipart>=0.0.29",
    "trafilatura>=2.0.0",
    "pypdf>=6.12.2",
    "python-docx>=1.2.0",
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.7",
    "ruff>=0.15.15",
]
